TKWAR-47: Started card but still in branch TKWAR-18; patching to conform to the code analyser still in progress